# test-actions

./: .gitignore  Makefile  ruff.toml
.cursor/rules/project-standards/: RULE.md
applications/app1/: pyproject.toml
applications/app1/src/app1/: config.py  main.py
applications/app2/: pyproject.toml
applications/app2/src/app2/: main.py
